ingress/ingress-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argo-cd-gateway
  namespace: argo-cd
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - argo-cd.yourdomain.com
    port:
      number: 80
      name: http
      protocol: HTTP 
    tls:
      httpsRedirect: false    
  - hosts:
    - argo-cd.yourdomain.com
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      # mode: SIMPLE
      mode: PASSTHROUGH
      credentialName: yourdomain-credential
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-cd-vs
  namespace: argo-cd
spec:
  hosts:
  - argo-cd.yourdomain.com
  gateways:
  - argo-cd-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - argo-cd.yourdomain.com
    route:
    - destination:
        host: argocd-server.argo-cd.svc.cluster.local
        port:
          number: 443   
      weight: 100
